--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "mocha",
     "dev": "node server.js",
-    "prod": "node server.js"
+    "prod": "npm start",
+    "heroku-postbuild": "npm rebuild"
   },
   "author": "",
   "license": "ISC",
