--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "10.x"
+  },
   "dependencies": {
     "acorn": "^6.0.4",
     "aws-sdk": "^2.311.0",
