--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "PlayGround.ds",
   "version": "1.0.0",
-  "description": "",
+  "description": "playground front server",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
@@ -16,7 +16,10 @@
     "node": "10.x"
   },
   "dependencies": {
+    "next": "7.0.2",
+    "next-routes": "^1.4.2",
     "acorn": "^6.0.4",
+    "ajv": "^6.5.5",
     "aws-sdk": "^2.311.0",
     "axios": "^0.18.0",
     "bluebird": "^3.5.2",
@@ -34,8 +37,6 @@
     "local-storage": "^1.4.2",
     "mocha": "^5.2.0",
     "multiparty": "^4.2.1",
-    "next": "^4.2.3",
-    "next-routes": "^1.4.2",
     "react": "^16.6.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-countdown-now": "^1.3.0",
@@ -61,7 +62,7 @@
     "babel-cli": "6.10.1",
     "babel-core": "6.10.4",
     "babel-eslint": "6.1.2",
-    "babel-loader": "6.2.4",
+    "babel-loader": "8.0.4",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-react-display-name": "2.0.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
@@ -77,7 +78,7 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.11.1",
-    "extract-text-webpack-plugin": "1.0.1",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.22.0",
     "less": "2.7.1",
@@ -89,7 +90,7 @@
     "stylus": "0.54.5",
     "stylus-loader": "2.1.1",
     "url-loader": "0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "1.14.1"
+    "webpack": "4.20.2",
+    "webpack-dev-server": "3.1.10"
   }
 }
